--- a/cards.html
+++ b/cards.html
@@ -20,6 +20,113 @@
     <title>cards</title>
   </head>
   <body>
+    <section class="cards">
+      <div class="title">
+        <h1>three column layout</h1>
+      </div>
+      <div class="cards-center">
+        <!-- single card -->
+        <article class="card">
+          <img src="./images/size-image-1.jpeg" alt="" />
+          <div class="card-info">
+            <h3>card info</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestias nemo atque autem? Ducimus, blanditiis alias!
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.squarespace.com/?clickid=x8zTQgyssxyKRwP0XST4e0w7UkCyjDRxOVYUUI0&utm_medium=pp&gad_source=1"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </article>
+        <!-- end of single card  -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./images/size-image-2.jpeg" alt="" />
+          <div class="card-info">
+            <h3>card info</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestias nemo atque autem? Ducimus, blanditiis alias!
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.squarespace.com/?clickid=x8zTQgyssxyKRwP0XST4e0w7UkCyjDRxOVYUUI0&utm_medium=pp&gad_source=1"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </article>
+        <!-- end of single card  -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./images/size-image-3.jpeg" alt="" />
+          <div class="card-info">
+            <h3>card info</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestias nemo atque autem? Ducimus, blanditiis alias!
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.squarespace.com/?clickid=x8zTQgyssxyKRwP0XST4e0w7UkCyjDRxOVYUUI0&utm_medium=pp&gad_source=1"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </article>
+        <!-- end of single card  -->
+        <!-- single card -->
+        <article class="card">
+          <img src="./images/size-image-4.jpeg" alt="" />
+          <div class="card-info">
+            <h3>card info</h3>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+              Molestias nemo atque autem? Ducimus, blanditiis alias!
+            </p>
+          </div>
+          <div class="card-footer">
+            <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.squarespace.com/?clickid=x8zTQgyssxyKRwP0XST4e0w7UkCyjDRxOVYUUI0&utm_medium=pp&gad_source=1"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+          </div>
+        </article>
+        <!-- end of single card  -->
+      </div>
+    </section>
     <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
