--- a/cards.html
+++ b/cards.html
@@ -106,8 +106,9 @@
           <div class="card-info">
             <h3>card info</h3>
             <p>
-              Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-              Molestias nemo atque autem? Ducimus, blanditiis alias!
+              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero cum
+              architecto modi cumque veniam eligendi ducimus molestias, quaerat
+              cupiditate facilis tempore aspernatur distinctio est quidem.
             </p>
           </div>
           <div class="card-footer">
