--- a/tiles.html
+++ b/tiles.html
@@ -20,6 +20,63 @@
     <title>tiles</title>
   </head>
   <body>
+    <section class="tiles">
+      <div class="tile">
+        <h1>tiles layout</h1>
+      </div>
+      <div class="tiles-center">
+        <!-- single tile -->
+        <div class="tile-1">
+          <img src="images/size-image-1.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-2">
+          <img src="images/size-image-2.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-3">
+          <img src="images/size-image-3.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-4">
+          <img src="images/size-image-4.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-5">
+          <img src="images/size-image-1.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-6">
+          <img src="images/size-image-2.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-7">
+          <img src="images/size-image-3.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-8">
+          <img src="images/size-image-4.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-9">
+          <img src="images/size-image-1.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+        <!-- single tile -->
+        <div class="tile-10">
+          <img src="images/size-image-2.jpeg" alt="" />
+        </div>
+        <!-- end of single tile -->
+      </div>
+    </section>
     <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
