grid area laayout

--- a/tiles.html
+++ b/tiles.html
@@ -21,7 +21,7 @@
   </head>
   <body>
     <section class="tiles">
-      <div class="tile">
+      <div class="title">
         <h1>tiles layout</h1>
       </div>
       <div class="tiles-center">
@@ -68,11 +68,6 @@
         <!-- single tile -->
         <div class="tile-9">
           <img src="images/size-image-1.jpeg" alt="" />
-        </div>
-        <!-- end of single tile -->
-        <!-- single tile -->
-        <div class="tile-10">
-          <img src="images/size-image-2.jpeg" alt="" />
         </div>
         <!-- end of single tile -->
       </div>
