--- a/layout.html
+++ b/layout.html
@@ -20,6 +20,47 @@
     <title>layout</title>
   </head>
   <body>
+    <main class="main">
+      <!-- header -->
+      <header class="header"><h2>grid makes layout easy</h2></header>
+      <!-- navbar -->
+       <nav class="navbar"></nav>
+      <ul>
+        <li>
+          <a href="hero.html">hero</a>
+        </li>
+        <li>
+          <a href="cards.html">cards</a>
+        </li>
+        <li>
+          <a href="tiles.html">tiles</a>
+        </li>
+        <li>
+          <a href="layout.html">layout</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- content -->
+     <section class="section">
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Itaque laudantium unde, officia commodi numquam facere consequatur quas nobis. Repellendus, sed harum id quisquam atque maxime perspiciatis debitis animi alias temporibus ipsa quod cum eveniet laudantium a quae veritatis accusantium ab ex itaque obcaecati, dolores magni officiis dolor. Delectus eligendi rerum perferendis deserunt non, optio debitis eaque ad adipisci nobis consequatur, cupiditate rem. Nesciunt praesentium esse sunt, incidunt id necessitatibus eos? Vitae dicta voluptatem quisquam ex.</p>
+     </section>
+     <section class="sidebar">
+      <a href="https://x.com"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.facebook.com/"
+              ><i class="fab fa-facebook"></i
+            ></a>
+            <a
+              href="https://www.squarespace.com/?clickid=x8zTQgyssxyKRwP0XST4e0w7UkCyjDRxOVYUUI0&utm_medium=pp&gad_source=1"
+              ><i class="fab fa-squarespace"></i
+            ></a>
+            <a href="https://www.linkedin.com"
+              ><i class="fab fa-linkedin"></i
+            ></a>
+     </section>
+     <div class="footer">
+      <p>copyright &copy; all rights reserved</p>
+     </div>
+    </main>
     <a href="index.html" class="btn">back to home</a>
   </body>
 </html>
